Tobacco Field Change

--- a/0.0.4
+++ b/0.0.4
@@ -30,7 +30,7 @@
                             }
                         },
                         {
-                            "actionTypeName": "command__Tobacco__c",
+                            "actionTypeName": "command__FinancialAccount_Tobacco__c",
                             "location": {
                                 "position": "below",
                                 "reference": "command__Mode__c",
