--- a/0.0.4
+++ b/0.0.4
@@ -60,7 +60,7 @@
                             }
                         },
                         {
-                            "actionTypeName": "command__Received__c",
+                            "actionTypeName": "command__AE_Received_Date__c",
                             "location": {
                                 "position": "below",
                                 "reference": "command__Closed_Date__c",
