Removed unneeded instructions.

--- a/0.0.3
+++ b/0.0.3
@@ -1,7 +1,199 @@
 {
     "instructionList": [
         {
-
+            "sObjectName": "FinServ__FinancialAccount__c",
+            "instructionTypeName": "command__Financial Account(Life) Layout",
+            "taskList": [
+                {
+                    "jiraTicket": "MISC-1340",
+                    "description": "Add new fields to Fin Account Life Layout",
+                    "actionType": "Field",
+                    "subTaskList": [
+                        {
+                            "actionTypeName": "command__Mode__c",
+                            "location": {
+                                "position": "below",
+                                "reference": "command__Dump_In_Lump_Sum__c",
+                                "section": "Information",
+                                "column": 0,
+                                "behavior": "Edit"
+                            }
+                        },
+                        {
+                            "actionTypeName": "command__X1035_Exchange__c",
+                            "location": {
+                                "position": "below",
+                                "reference": "command__Modal_Premium__c",
+                                "section": "Information",
+                                "column": 1,
+                                "behavior": "Edit"
+                            }
+                        },
+                        {
+                            "actionTypeName": "command__FinancialAccount_Tobacco__c",
+                            "location": {
+                                "position": "below",
+                                "reference": "command__Mode__c",
+                                "section": "Information",
+                                "column": 0,
+                                "behavior": "Edit"
+                            }
+                        },
+                        {
+                            "actionTypeName": "command__Class__c",
+                            "location": {
+                                "position": "below",
+                                "reference": "command__X1035_Exchange__c",
+                                "section": "Information",
+                                "column": 1,
+                                "behavior": "Edit"
+                            }
+                        },
+                        {
+                            "actionTypeName": "command__Signed_Date__c",
+                            "location": {
+                                "position": "below",
+                                "reference": "command__Review_Date__c",
+                                "section": "Dates",
+                                "column": 0,
+                                "behavior": "Edit"
+                            }
+                        },
+                        {
+                            "actionTypeName": "command__AE_Received_Date__c",
+                            "location": {
+                                "position": "below",
+                                "reference": "command__Closed_Date__c",
+                                "section": "Dates",
+                                "column": 1,
+                                "behavior": "Edit"
+                            }
+                        }
+                    ]
+                }
+            ]
+        },
+        {
+            "sObjectName": "FinServ__FinancialAccount__c",
+            "instructionTypeName": "command__Financial Account (Annuity) Layout",
+            "taskList": [
+                {
+                    "jiraTicket": "MISC-1346",
+                    "description": "Add AE Data Feed fields to annuity layout.",
+                    "actionType": "Field",
+                    "subTaskList": [
+                        {
+                            "actionType": "LayoutSection",
+                            "actionTypeName": "AE Data",
+                            "location": {
+                                "reference": "Basic Info"
+                            },
+                            "optionsMap": {
+                                "customLabel": true,
+                                "detailHeading" : true,
+                                "editHeading": false,
+                                "style": "TwoColumnsLeftToRight"
+                            }
+                        },
+                        {
+                            "actionTypeName": "command__AE_Account_Value__c",
+                            "location": {
+                                "section": "AE Data",
+                                "column": 0,
+                                "behavior": "Readonly"
+                            }
+                        },
+                        {
+                            "actionTypeName": "command__AE_Tax_Qualification__c",
+                            "location": {
+                                "section": "AE Data",
+                                "column": 1,
+                                "behavior": "Readonly"
+                            }
+                        },
+                        {
+                            "actionTypeName": "command__AE_Actuarial_Present_Value__c",
+                            "location": {
+                                "section": "AE Data",
+                                "column": 0,
+                                "behavior": "Readonly"
+                            }
+                        },
+                        {
+                            "actionTypeName": "command__AE_RMD_Value__c",
+                            "location": {
+                                "section": "AE Data",
+                                "column": 1,
+                                "behavior": "Readonly"
+                            }
+                        },
+                        {
+                            "actionTypeName": "command__AE_Year_End_Value__c",
+                            "location": {
+                                "section": "AE Data",
+                                "column": 0,
+                                "behavior": "Readonly"
+                            }
+                        },
+                        {
+                            "actionTypeName": "command__AE_Gross_Death_Benefit__c",
+                            "location": {
+                                "section": "AE Data",
+                                "column": 1,
+                                "behavior": "Readonly"
+                            }
+                        },
+                        {
+                            "actionTypeName": "command__AE_Initial_Purchase_Amount__c",
+                            "location": {
+                                "section": "AE Data",
+                                "column": 0,
+                                "behavior": "Readonly"
+                            }
+                        },
+                        {
+                            "actionTypeName": "command__AE_Total_Withdrawal__c",
+                            "location": {
+                                "section": "AE Data",
+                                "column": 1,
+                                "behavior": "Readonly"
+                            }
+                        },
+                        {
+                            "actionTypeName": "command__AE_Surrender_Value__c",
+                            "location": {
+                                "section": "AE Data",
+                                "column": 0,
+                                "behavior": "Readonly"
+                            }
+                        },
+                        {
+                            "actionTypeName": "command__AE_Total_Contribution_Since_Inception__c",
+                            "location": {
+                                "section": "AE Data",
+                                "column": 1,
+                                "behavior": "Readonly"
+                            }
+                        },
+                        {
+                            "actionTypeName": "command__AE_Effective_Date__c",
+                            "location": {
+                                "section": "AE Data",
+                                "column": 0,
+                                "behavior": "Readonly"
+                            }
+                        },
+                        {
+                            "actionTypeName": "command__AE_Received_Date__c",
+                            "location": {
+                                "section": "AE Data",
+                                "column": 1,
+                                "behavior": "Readonly"
+                            }
+                        }
+                    ]
+                }
+            ]
         }
     ]
 }
