--- a/0.0.4
+++ b/0.0.4
@@ -6,7 +6,7 @@
                 {
                     "jiraTicket": "additionalInstructionsA",
                     "actionType": "PicklistValueCustom",
-                    "actionTypeName": "command__Account_Type__c",
+                    "actionTypeName": "Account_Type__c",
                     "optionsMap": {
                         "sortList": true
                     },
@@ -66,7 +66,7 @@
                 {
                     "jiraTicket": "additionalInstructionsB",
                     "actionType": "RecordTypePicklist",
-                    "actionTypeName": "command__AUM",
+                    "actionTypeName": "AUM",
                     "optionsMap": {
                         "sortList": true
                     },
