testing command prefix.

--- a/0.0.4
+++ b/0.0.4
@@ -62,11 +62,12 @@
         },
         {
             "sObjectName" : "FinServ__FinancialAccount__c",
+            "instructionTypeName" : "command__AUM",
             "taskList": [
                 {
                     "jiraTicket": "additionalInstructionsB",
                     "actionType": "RecordTypePicklist",
-                    "actionTypeName": "AUM",
+                    "actionTypeName": "command__Account_Type__c",
                     "optionsMap": {
                         "sortList": true
                     },
