testing modified task.

--- a/0.0.4
+++ b/0.0.4
@@ -8,7 +8,7 @@
                     "actionType": "PicklistValueCustom",
                     "actionTypeName": "Account_Type__c",
                     "optionsMap": {
-                        "sortList": true
+                        "sortList": "true"
                     },
                     "subTaskList": [
                         {
@@ -69,7 +69,7 @@
                     "actionType": "RecordTypePicklist",
                     "actionTypeName": "command__Account_Type__c",
                     "optionsMap": {
-                        "sortList": true
+                        "sortList": "true"
                     },
                     "subTaskList": [
                         {
