testing modified task.

--- a/0.0.4
+++ b/0.0.4
@@ -6,7 +6,7 @@
                 {
                     "jiraTicket": "additionalInstructionsA",
                     "actionType": "PicklistValueCustom",
-                    "actionTypeName": "Account_Type__c",
+                    "actionTypeName": "command__Account_Type__c",
                     "optionsMap": {
                         "sortList": "true"
                     },
