testing modified task.

--- a/0.0.4
+++ b/0.0.4
@@ -8,7 +8,7 @@
                     "actionType": "PicklistValueCustom",
                     "actionTypeName": "command__Account_Type__c",
                     "optionsMap": {
-                        "sortList": "true"
+                        "sortList": true
                     },
                     "subTaskList": [
                         {
@@ -68,9 +68,6 @@
                     "jiraTicket": "additionalInstructionsB",
                     "actionType": "RecordTypePicklist",
                     "actionTypeName": "command__Account_Type__c",
-                    "optionsMap": {
-                        "sortList": "true"
-                    },
                     "subTaskList": [
                         {
                             "actionTypeLabel": "401(A)"
