--- a/0.0.4
+++ b/0.0.4
@@ -10,52 +10,22 @@
                     "optionsMap": {
                         "sortList": true
                     },
-                    "subTaskList": [
-                        {
-                            "actionTypeLabel": "401(A)"
-                        },
-                        {
-                            "actionTypeLabel": "403(B)"
-                        },
-                        {
-                            "actionTypeLabel": "457"
-                        },
-                        {
-                            "actionTypeLabel": "529"
-                        },
-                        {
-                            "actionTypeLabel": "Contributory IRA"
-                        },
-                        {
-                            "actionTypeLabel": "Conversion Roth"
-                        },
-                        {
-                            "actionTypeLabel": "Custodial"
-                        },
-                        {
-                            "actionTypeLabel": "Defined Benefit Plan"
-                        },
-                        {
-                            "actionTypeLabel": "Foundation"
-                        },
-                        {
-                            "actionTypeLabel": "Health Savings Account"
-                        },
-                        {
-                            "actionTypeLabel": "Joint"
-                        },
-                        {
-                            "actionTypeLabel": "Joint Tenant"
-                        },
-                        {
-                            "actionTypeLabel": "SAR Sep Plan"
-                        },
-                        {
-                            "actionTypeLabel": "Simplified Employee Pension Plan"
-                        },
-                        {
-                            "actionTypeLabel": "Transfer on Death"
-                        }
+                    "picklistValues": [
+                        "401(A)",
+                        "403(B)",
+                        "457",
+                        "529",
+                        "Contributory IRA",
+                        "Conversion Roth",
+                        "Custodial",
+                        "Defined Benefit Plan",
+                        "Foundation",
+                        "Health Savings Account",
+                        "Joint",
+                        "Joint Tenant",
+                        "SAR Sep Plan",
+                        "Simplified Employee Pension Plan",
+                        "Transfer on Death"
                     ]
                 }
             ]
@@ -68,52 +38,22 @@
                     "jiraTicket": "additionalInstructionsB",
                     "actionType": "RecordTypePicklist",
                     "actionTypeName": "command__Account_Type__c",
-                    "subTaskList": [
-                        {
-                            "actionTypeLabel": "401(A)"
-                        },
-                        {
-                            "actionTypeLabel": "403(B)"
-                        },
-                        {
-                            "actionTypeLabel": "457"
-                        },
-                        {
-                            "actionTypeLabel": "529"
-                        },
-                        {
-                            "actionTypeLabel": "Contributory IRA"
-                        },
-                        {
-                            "actionTypeLabel": "Conversion Roth"
-                        },
-                        {
-                            "actionTypeLabel": "Custodial"
-                        },
-                        {
-                            "actionTypeLabel": "Defined Benefit Plan"
-                        },
-                        {
-                            "actionTypeLabel": "Foundation"
-                        },
-                        {
-                            "actionTypeLabel": "Health Savings Account"
-                        },
-                        {
-                            "actionTypeLabel": "Joint"
-                        },
-                        {
-                            "actionTypeLabel": "Joint Tenant"
-                        },
-                        {
-                            "actionTypeLabel": "SAR Sep Plan"
-                        },
-                        {
-                            "actionTypeLabel": "Simplified Employee Pension Plan"
-                        },
-                        {
-                            "actionTypeLabel": "Transfer on Death"
-                        }
+                    "picklistValues": [
+                        "401(A)",
+                        "403(B)",
+                        "457",
+                        "529",
+                        "Contributory IRA",
+                        "Conversion Roth",
+                        "Custodial",
+                        "Defined Benefit Plan",
+                        "Foundation",
+                        "Health Savings Account",
+                        "Joint",
+                        "Joint Tenant",
+                        "SAR Sep Plan",
+                        "Simplified Employee Pension Plan",
+                        "Transfer on Death"
                     ]
                 }
             ]
