--- a/0.0.1
+++ b/0.0.1
@@ -51,16 +51,14 @@
                     "description": "Add files related list",
                     "actionType": "RelatedList",
                     "actionTypeName": "RelatedFileList",
-                    "optionsMap": {
-                    }
+                    "optionsMap": {}
                 },
-                                {
+                {
                     "jiraTicket": "ac-1866d",
                     "description": "Add notes related List",
                     "actionType": "RelatedList",
                     "actionTypeName": "RelatedContentNoteList",
-                    "optionsMap": {
-                    }
+                    "optionsMap": {}
                 }
             ]
         },
@@ -105,7 +103,7 @@
                         "section": "Basic Information",
                         "column": 1,
                         "behavior": "Edit"
-                    }                        
+                    }
                 }
             ]
         },
@@ -155,6 +153,141 @@
                     "description": "Add files related List",
                     "actionType": "RelatedList",
                     "actionTypeName": "RelatedFileList"
+                }
+            ]
+        },
+        {
+            "sObjectName": "FinServ__FinancialAccount__c",
+            "instructionTypeName": "command__Financial Account(Life) Layout",
+            "taskList": [
+                {
+                    "actionType": "Field",
+                    "subTaskList": [
+                        {
+                            "jiraTicket": "ac-20125a",
+                            "actionTypeName": "command__Modal_Premium__c",
+                            "description": "Add modal premium below Death Benift on Financial Account(Life) Layout ",
+                            "location": {
+                                "position": "below",
+                                "reference": "command__Death_Benefit__c",
+                                "section": "Information",
+                                "column": 1,
+                                "behavior": "Edit"
+                            }
+                        },
+                        {
+                            "jiraTicket": "ac-20125b",
+                            "actionTypeName": "command__Issued_Date__c",
+                            "description": "Add Issued date to Financial Account(Life) Layout",
+                            "location": {
+                                "section": "Dates",
+                                "column": 0,
+                                "behavior": "Edit"
+                            }
+                        },
+                        {
+                            "jiraTicket": "ac-20125c",
+                            "actionTypeName": "command__Review_Date__c",
+                            "description": "Add Review Date to Financial Account(Life) Layout ",
+                            "location": {
+                                "section": "Dates",
+                                "column": 0,
+                                "behavior": "Edit"
+                            }
+                        },
+                        {
+                            "jiraTicket": "ac-20125d",
+                            "actionTypeName": "command__Due_Date__c",
+                            "description": "Add Due Date to Financial Account(Life) Layout ",
+                            "location": {
+                                "section": "Dates",
+                                "column": 1,
+                                "behavior": "Edit"
+                            }
+                        },
+                        {
+                            "jiraTicket": "ac-20125e",
+                            "actionTypeName": "command__Paid_Date__c",
+                            "description": "Add Paid Date to Financial Account(Life) Layout ",
+                            "location": {
+                                "position": "below",
+                                "reference": "command__Due_Date__c",
+                                "section": "Dates",
+                                "column": 1,
+                                "behavior": "Edit"
+                            }
+                        },
+                        {
+                            "jiraTicket": "ac-20125f",
+                            "actionTypeName": "command__Closed_Date__c",
+                            "description": "Add Closed Date to Financial Account(Life) Layout ",
+                            "location": {
+                                "position": "below",
+                                "reference": "command__Paid_Date__c",
+                                "section": "Dates",
+                                "column": 1,
+                                "behavior": "Edit"
+                            }
+                        }
+                    ]
+                }
+            ]
+        },
+        {
+            "sObjectName": "FinServ__FinancialAccount__c",
+            "instructionTypeName": "command__Financial Account(AUM) Layout",
+            "taskList": [
+                {
+                    "actionType": "Field",
+                    "subTaskList": [
+                        {
+                            "jiraTicket": "ac-20125g",
+                            "actionTypeName": "command__Registration_Id__c",
+                            "description": "Add Registration ID to Financial Account(AUM) Layout ",
+                            "location": {
+                                "position": "below",
+                                "reference": "FinServ__Household__c",
+                                "section": "Basic Information",
+                                "column": 0,
+                                "behavior": "Edit"
+                            }
+                        },
+                        {
+                            "jiraTicket": "ac-20125h",
+                            "actionTypeName": "command__Management_Style__c",
+                            "description": "Add Management Style to Financial Account(AUM) Layout ",
+                            "location": {
+                                "position": "below",
+                                "reference": "command__Registration_Id__c",
+                                "section": "Basic Information",
+                                "column": 0,
+                                "behavior": "Edit"
+                            }
+                        }
+                    ]
+                }
+            ]
+        },
+        {
+            "sObjectName": "FinServ__FinancialAccount__c",
+            "instructionTypeName": "command__Financial Account (Annuity) Layout",
+            "description": "Add Expected Premium to Financial Account(Annuity) Layout ",
+            "taskList": [
+                {
+                    "actionType": "Field",
+                    "subTaskList": [
+                        {
+                            "jiraTicket": "ac-20125K",
+                            "actionTypeName": "command__AE_Expected_Premium__c",
+                            "location": {
+                                "position": "below",
+                                "reference": "command__AE_Account_Value__c",
+                                "section": "AE Data",
+                                "column": 0,
+                                "behavior": "Edit"
+                            }
+                        }
+                    ]
                 }
             ]
         }
