--- a/0.0.3
+++ b/0.0.3
@@ -190,6 +190,17 @@
                                 "column": 1,
                                 "behavior": "Readonly"
                             }
+                        },
+                        {
+                            "jiraTicket": "ac-20125",
+                            "actionTypeName": "command__AE_Expected_Premium__c",
+                            "location": {
+                                "position": "below",
+                                "reference": "command__AE_Account_Value__c",
+                                "section": "AE Data",
+                                "column": 0,
+                                "behavior": "Edit"
+                            }
                         }
                     ]
                 }
