testing modified task.

--- a/0.0.4
+++ b/0.0.4
@@ -11,8 +11,8 @@
                         "sortList": true
                     },
                     "picklistValues": [
-                        "401(a)",
-                        "403(b)",
+                        "401(A)",
+                        "403(B)",
                         "457",
                         "529",
                         "Contributory IRA",
@@ -38,23 +38,24 @@
                     "jiraTicket": "additionalInstructionsB",
                     "actionType": "RecordTypePicklist",
                     "actionTypeName": "command__Account_Type__c",
-                    "picklistValues": [
-                        "401(A)",
-                        "403(B)",
-                        "457",
-                        "529",
-                        "Contributory IRA",
-                        "Conversion Roth",
-                        "Custodial",
-                        "Defined Benefit Plan",
-                        "Foundation",
-                        "Health Savings Account",
-                        "Joint",
-                        "Joint Tenant",
-                        "SAR Sep Plan",
-                        "Simplified Employee Pension Plan",
-                        "Transfer on Death"
-                    ]
+                    "optionsMap": {
+                        "picklistValues":
+                            "401(A),
+                            403(B),
+                            457,
+                            529,
+                            Contributory IRA,
+                            Conversion Roth,
+                            Custodial,
+                            Defined Benefit Plan,
+                            Foundation,
+                            Health Savings Account,
+                            Joint,
+                            Joint Tenant,
+                            SAR Sep Plan,
+                            Simplified Employee Pension Plan,
+                            Transfer on Death"
+                    }
                 }
             ]
         }
