--- a/0.0.4
+++ b/0.0.4
@@ -40,21 +40,7 @@
                     "actionTypeName": "command__Account_Type__c",
                     "optionsMap": {
                         "picklistValues":
-                            "401(A),
-                            403(B),
-                            457,
-                            529,
-                            Contributory IRA,
-                            Conversion Roth,
-                            Custodial,
-                            Defined Benefit Plan,
-                            Foundation,
-                            Health Savings Account,
-                            Joint,
-                            Joint Tenant,
-                            SAR Sep Plan,
-                            Simplified Employee Pension Plan,
-                            Transfer on Death"
+                            "401(A),403(B),457,529,Contributory IRA,Conversion Roth,Custodial,Defined Benefit Plan,Foundation,Health Savings Account,Joint,Joint Tenant,SAR Sep Plan,Simplified Employee Pension Plan,Transfer on Death"
                     }
                 }
             ]
