--- a/0.0.4
+++ b/0.0.4
@@ -4,7 +4,7 @@
             "sObjectName" : "FinServ__FinancialAccount__c",
             "taskList": [
                 {
-                    "jiraTicket": "additionalInstructionsA",
+                    "jiraTicket": "AC-20154",
                     "actionType": "PicklistValueCustom",
                     "actionTypeName": "command__Account_Type__c",
                     "optionsMap": {
@@ -20,12 +20,84 @@
             "instructionTypeName" : "command__AUM",
             "taskList": [
                 {
-                    "jiraTicket": "additionalInstructionsB",
+                    "jiraTicket": "AC-20154",
                     "actionType": "RecordTypePicklist",
                     "actionTypeName": "command__Account_Type__c",
                     "optionsMap": {
                         "picklistValues":
                             "401(A),403(B),457,529,Contributory IRA,Conversion Roth,Custodial,Defined Benefit Plan,Foundation,Health Savings Account,Joint,Joint Tenant,SAR Sep Plan,Simplified Employee Pension Plan,Transfer on Death"
+                    }
+                }
+            ]
+        },
+        {
+            "sObjectName" : "FinServ__FinancialAccount__c",
+            "taskList": [
+                {
+                    "jiraTicket": "AC-20154",
+                    "actionType": "PicklistValueCustom",
+                    "actionTypeName": "FinServ__Status__c",
+                    "optionsMap": {
+                        "picklistValues":
+                            "Approved,Await 1035 Funds,Held at AE,Lapse Pending,Lapsed"
+                    }
+                }
+            ]
+        },
+        {
+            "sObjectName" : "FinServ__FinancialAccount__c",
+            "taskList": [
+                {
+                    "jiraTicket": "AC-20154",
+                    "actionType": "PicklistValueCustom",
+                    "actionTypeName": "command__AE_Status__c",
+                    "optionsMap": {
+                        "picklistValues":
+                            "Awaiting AOF,Awaiting Funds,Held at AE,In Process,NIGO at Carrier,Pending Issue,Received,Submitted,Withdrawn"
+                    }
+                }
+            ]
+        },
+        {
+            "sObjectName" : "FinServ__FinancialAccount__c",
+            "taskList": [
+                {
+                    "jiraTicket": "AC-20154",
+                    "actionType": "PicklistValueCustom",
+                    "actionTypeName": "FinServ__PaymentFrequency__c",
+                    "optionsMap": {
+                        "picklistValues":
+                            "Quarterly"
+                    }
+                }
+            ]
+        },
+        {
+            "sObjectName" : "FinServ__FinancialAccount__c",
+            "instructionTypeName" : "command__Annuity",
+            "taskList": [
+                {
+                    "jiraTicket": "AC-20154",
+                    "actionType": "RecordTypePicklist",
+                    "actionTypeName": "command__AE_Status__c",
+                    "optionsMap": {
+                        "picklistValues":
+                            "Awaiting AOF,Awaiting Funds,Held at AE,In Process,NIGO at Carrier,Pending Issue,Received,Submitted,Withdrawn"
+                    }
+                }
+            ]
+        },
+        {
+            "sObjectName" : "FinServ__FinancialAccount__c",
+            "instructionTypeName" : "command__Annuity",
+            "taskList": [
+                {
+                    "jiraTicket": "AC-20154",
+                    "actionType": "RecordTypePicklist",
+                    "actionTypeName": "FinServ__Status__c",
+                    "optionsMap": {
+                        "picklistValues":
+                            "Approved,Await 1035 Funds,Held at AE,Lapse Pending,Lapsed"
                     }
                 }
             ]
