added comma to version

--- a/0.0.4
+++ b/0.0.4
@@ -1,5 +1,5 @@
 {
-    "version": "0.0.4"
+    "version": "0.0.4",
     "instructionList": [
         {
             "sObjectName" : "FinServ__FinancialAccount__c",
