RecordType Picklist update

--- a/0.0.6
+++ b/0.0.6
@@ -93,6 +93,19 @@
                     }
                 }
             ]
+        },
+        {
+            "sObjectName": "FinServ__FinancialAccount__c",
+            "taskList": [
+                {
+                    "jiraTicket": "AC-4682",
+                    "actionType": "PicklistValueCustom",
+                    "actionTypeName": "command__Tax_Qualification__c",
+                    "optionsMap": {
+                        "picklistValues": "457 Plan,529 Plan,Beneficiary IRA,Educational IRA,HR10,Health Savings Account,Medical Savings Account,Non Deductible IRA,Non-Qualified,Non-Qualified (1035),Pension Plan,Profit Sharing Plan,Qualified,Rollover IRA,Roth IRA,SEP IRA,Simple IRA,Traditional IRA,UGMA,UTMA"
+                    }
+                }
+            ]
         }
     ]
 }
