Spit the instructions for successful execution

--- a/0.0.8
+++ b/0.0.8
@@ -2,10 +2,10 @@
     "instructionList": [
         {
             "sObjectName": "FinServ__FinancialAccount__c",
-            "instructionTypeName": "command__Annuity",
+            "instructionTypeName": "command__Life",
             "taskList": [
                 {
-                    "jiraTicket": "AC-4682a",
+                    "jiraTicket": "AC-4682c",
                     "actionType": "RecordTypePicklist",
                     "actionTypeName": "command__Tax_Qualification__c",
                     "optionsMap": {
@@ -16,10 +16,10 @@
         },
         {
             "sObjectName": "FinServ__FinancialAccount__c",
-            "instructionTypeName": "command__AUM",
+            "instructionTypeName": "command__Other",
             "taskList": [
                 {
-                    "jiraTicket": "AC-4682b",
+                    "jiraTicket": "AC-4682d",
                     "actionType": "RecordTypePicklist",
                     "actionTypeName": "command__Tax_Qualification__c",
                     "optionsMap": {
