--- a/0.0.9
+++ b/0.0.9
@@ -2,10 +2,10 @@
     "instructionList": [
         {
             "sObjectName": "FinServ__FinancialAccount__c",
-            "instructionTypeName": "command__Annuity",
+            "instructionTypeName": "command__Mutual_Funds",
             "taskList": [
                 {
-                    "jiraTicket": "AC-4682a",
+                    "jiraTicket": "AC-4682e",
                     "actionType": "RecordTypePicklist",
                     "actionTypeName": "command__Tax_Qualification__c",
                     "optionsMap": {
@@ -16,10 +16,10 @@
         },
         {
             "sObjectName": "FinServ__FinancialAccount__c",
-            "instructionTypeName": "command__AUM",
+            "instructionTypeName": "command__REIT_s",
             "taskList": [
                 {
-                    "jiraTicket": "AC-4682b",
+                    "jiraTicket": "AC-4682f",
                     "actionType": "RecordTypePicklist",
                     "actionTypeName": "command__Tax_Qualification__c",
                     "optionsMap": {
