Changed tax qualification to Premiums object

--- a/0.0.6
+++ b/0.0.6
@@ -96,7 +96,7 @@
 
         },
         {
-            "sObjectName": "FinServ__FinancialAccount__c",
+            "sObjectName": "command__Premium__c",
             "taskList": [
                 {
                     "jiraTicket": "AC-4682",
