--- a/0.0.7
+++ b/0.0.7
@@ -1,8 +1,8 @@
 {
     "instructionList": [
         {
-            "sObjectName": "FinServ__FinancialAccount__c",
-            "instructionTypeName": "command__Annuity",
+            "sObjectName": "command__Premium__c",
+            "instructionTypeName": "command__Funding_Alternative",
             "taskList": [
                 {
                     "jiraTicket": "AC-4682a",
@@ -15,8 +15,8 @@
             ]
         },
         {
-            "sObjectName": "FinServ__FinancialAccount__c",
-            "instructionTypeName": "command__AUM",
+            "sObjectName": "command__Premium__c",
+            "instructionTypeName": "command__Funding_Annuity",
             "taskList": [
                 {
                     "jiraTicket": "AC-4682b",
