--- a/0.0.8
+++ b/0.0.8
@@ -1,8 +1,8 @@
 {
     "instructionList": [
         {
-            "sObjectName": "FinServ__FinancialAccount__c",
-            "instructionTypeName": "command__Life",
+            "sObjectName": "command__Premium__c",
+            "instructionTypeName": "command__Funding_AUM",
             "taskList": [
                 {
                     "jiraTicket": "AC-4682c",
@@ -15,8 +15,8 @@
             ]
         },
         {
-            "sObjectName": "FinServ__FinancialAccount__c",
-            "instructionTypeName": "command__Other",
+            "sObjectName": "command__Premium__c",
+            "instructionTypeName": "command__Funding_Life",
             "taskList": [
                 {
                     "jiraTicket": "AC-4682d",
