--- a/0.0.9
+++ b/0.0.9
@@ -1,8 +1,8 @@
 {
     "instructionList": [
         {
-            "sObjectName": "FinServ__FinancialAccount__c",
-            "instructionTypeName": "command__Mutual_Funds",
+            "sObjectName": "command__Premium__c",
+            "instructionTypeName": "command__Funding_Other",
             "taskList": [
                 {
                     "jiraTicket": "AC-4682e",
@@ -15,8 +15,8 @@
             ]
         },
         {
-            "sObjectName": "FinServ__FinancialAccount__c",
-            "instructionTypeName": "command__REIT_s",
+            "sObjectName": "command__Premium__c",
+            "instructionTypeName": "command__Paid",
             "taskList": [
                 {
                     "jiraTicket": "AC-4682f",
