--- a/0.0.6
+++ b/0.0.6
@@ -71,17 +71,17 @@
         {
             "sObjectName": "PersonAccount",
             "instructionTypeName": "command__Client",
-            "description": "Add Type field to AC Task Layout",
+            "description": "Add Gift/files related list to Client Layout",
             "taskList": [
                 {
-                    "jiraTicket": "ac-57a,ac-1878",
+                    "jiraTicket": "ac-1878",
                     "description": "Add files related list",
                     "actionType": "RelatedList",
                     "actionTypeName": "RelatedFileList",
                     "optionsMap": {}
                 },
                 {
-                    "jiraTicket": "ac-57b,ac-1878",
+                    "jiraTicket": "ac-1878",
                     "description": "Add Gift related list to Client Layout.",
                     "actionType": "RelatedList",
                     "actionTypeName": "command__Gift__c.command__Contact__c",
@@ -95,7 +95,7 @@
             ]
         },
         {
-            "sObjectName": "FinServ__FinancialAccount__c",
+            "sObjectName": "command__Premium__c",
             "taskList": [
                 {
                     "jiraTicket": "AC-4682",
