--- a/0.0.6
+++ b/0.0.6
@@ -71,18 +71,18 @@
         {
             "sObjectName": "PersonAccount",
             "instructionTypeName": "command__Client",
-            "description": "Add Gift related list to Client Layout",
+            "description": "Add Gifts and Files Related Lists to Client Layout",
             "taskList": [
                 {
-                    "jiraTicket": "ac-1878",
+                    "jiraTicket": "ac-1878a",
                     "description": "Add files related list",
                     "actionType": "RelatedList",
                     "actionTypeName": "RelatedFileList",
                     "optionsMap": {}
                 },
                 {
-                    "jiraTicket": "ac-1878",
-                    "description": "Add Gift related list to Client Layout.",
+                    "jiraTicket": "ac-1878b",
+                    "description": "Add Gift related list",
                     "actionType": "RelatedList",
                     "actionTypeName": "command__Gift__c.command__Contact__c",
                     "optionsMap": {
@@ -91,6 +91,27 @@
                         "sortField": null,
                         "sortOrder": null
                     }
+                }
+            ]
+        },
+        {
+            "sObjectName": "Account",
+            "instructionTypeName": "command__AC Account (Household) Layout",
+            "description": "Add Files and Notes Related Lists to Account (Household) Layout",
+            "taskList": [
+                {
+                    "jiraTicket": "ac-1878c",
+                    "description": "Add Files related list",
+                    "actionType": "RelatedList",
+                    "actionTypeName": "RelatedFileList",
+                    "optionsMap": {}
+                },
+                {
+                    "jiraTicket": "ac-1878b",
+                    "description": "Add Notes related list",
+                    "actionType": "RelatedList",
+                    "actionTypeName": "RelatedContentNoteList",
+                    "optionsMap": {}
                 }
             ]
         },
@@ -107,27 +128,6 @@
                 }
             ]
 
-        },
-        {
-            "sObjectName": "Account",
-            "instructionTypeName": "FinServ__Account (Household) Layout",
-            "description": "Add Type field to AC Task Layout",
-            "taskList": [
-                {
-                    "jiraTicket": "ac-1878a",
-                    "description": "Add files related list",
-                    "actionType": "RelatedList",
-                    "actionTypeName": "RelatedFileList",
-                    "optionsMap": {}
-                },
-                {
-                    "jiraTicket": "ac-1878b",
-                    "description": "Add files related list",
-                    "actionType": "RelatedList",
-                    "actionTypeName": "RelatedContentNoteList",
-                    "optionsMap": {}
-                }
-            ]
         }
     ]
 }
