Updated JiraTicket number

--- a/0.0.6
+++ b/0.0.6
@@ -107,7 +107,7 @@
                     "optionsMap": {}
                 },
                 {
-                    "jiraTicket": "ac-1878b",
+                    "jiraTicket": "ac-1878d",
                     "description": "Add Notes related list",
                     "actionType": "RelatedList",
                     "actionTypeName": "RelatedContentNoteList",
