Updated the task related description

--- a/0.1.2
+++ b/0.1.2
@@ -3,11 +3,11 @@
         {
             "sObjectName": "Event",
             "instructionTypeName": "command__Event Layout",
-            "description": "Add the Repeat field Event Layout",
+            "description": "Add  fields on  Event Layout",
             "taskList": [
                 {
                     "jiraTicket": "ac-549a",
-                    "description": "Add Type field to AC Task Layout",
+                    "description": "Add the Repeat field under Assigned To in the Calendar Details section",
                     "actionType": "Field",
                     "actionTypeName": "IsRecurrence2",
                     "location": {
@@ -20,7 +20,7 @@
                 },
                 {
                     "jiraTicket": "ac-549b",
-                    "description": "Add Type field to AC Task Layout",
+                    "description": "Add the Attendees Field under ‘Repeat’ in the Calendar Details section",
                     "actionType": "Field",
                     "actionTypeName": "Attendees",
                     "location": {
@@ -33,7 +33,7 @@
                 },
                 {
                     "jiraTicket": "ac-549c",
-                    "description": "Add Delete All Following  on Event Layout",
+                    "description": "Add Delete All Following  to the Mobile andLightning Actions section",
                     "actionType": "PlatformAction",
                     "actionTypeName": "nothing",
                     "optionsMap": {
@@ -44,7 +44,7 @@
                 },
                 {
                     "jiraTicket": "ac-549d",
-                    "description": "Add Delete All Following  on Event Layout",
+                    "description": "Add DeleteSeries to Mobile andLightning Actions section",
                     "actionType": "PlatformAction",
                     "actionTypeName": "nothing",
                     "optionsMap": {
